fixed alignment and sizes

--- a/list/listStyle.css
+++ b/list/listStyle.css
@@ -6,17 +6,18 @@
 
 body {
   font-family: sans-serif;
+  color: rgb(36, 35, 35);
 }
 
 .container {
-  width: 40vw;
+  width: 43vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   padding: 10px;
   padding-top: 20px;
-  row-gap: 20px;
-  column-gap: 10px;
+  column-gap: 15px;
+  row-gap: 5px;
   background-color: #e5e5e54b;
   font-size: 14px;
 }
@@ -45,14 +46,14 @@ body {
   display: grid;
   align-items: center;
   grid-template-columns: auto 1fr;
-  column-gap: 20px;
-  row-gap: 25px;
+  column-gap: 15px;
+  row-gap: 22px;
   grid-template-rows: 1fr 1fr 1fr;
 }
 
 .text {
   grid-template-columns: auto;
-  min-height: 92px;
+  min-height: 96px;
 }
 
 .icText {
